# tabforge-cyberdeck

./: .gitattributes  .gitignore  README.md
.github/workflows/: ci.yml  firmware-tab5.yml  pages.yml
companion/tabforge-companion/: README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
companion/tabforge-companion/android/app/: build.gradle
companion/tabforge-companion/src/: main.ts  styles.css
config/: app-catalog.json  device-profiles.json  update-channels.json
docs/: app-store.json  architecture.md  device-map.md  index.html  manifest-lab.json  manifest.json  meshtastic-meshcore-switch.md  ota-and-github.md  roadmap.md  security.md
docs/apps/: cardputer-keyboard.json  field-comms.json  index.html  ir-remote-pack.json  mesh-plus.json  meshcore-tools.json  meshtastic-plus.json  road-scout-tab.json  rtl-sdr.json  voice-notes.json  wardrive.json
docs/downloads/: tabforge-companion-0.1.0-debug.apk.sha256.txt
firmware/tabforge-tab5/: CMakeLists.txt  README.md  idf_component.yml  partitions.csv  sdkconfig.defaults
firmware/tabforge-tab5/main/: CMakeLists.txt  app_main.c  app_main.cpp  idf_component.yml  tabforge_forward.h
protocol/: tabforge-link-v0.md  tabforge-link.schema.json
sd/tabforge/: config.example.json
tools/: README.md  build-companion-apk.ps1  package-release.ps1  publish-github.ps1  register-devops-sync.ps1  save-github-token.ps1  update-app-catalog.ps1  verify-project.ps1
web/console/: app.js  index.html  styles.css
(+3 files in other folders)
